# BlackOrderInstaller

./: README.md  android.sh  androidinstaller.sh  ios.sh  iosinstaller.sh  pyproject.toml
installer/: __init__.py  __main__.py  astring.py  language.py
installer/language/: TR.sirijson
order_installer/: __init__.py  __main__.py  astring.py  language.py
order_installer/language/: TR.orderjson
